# seal-sandbox

./: meson.build
include/: vector.h
src/: vector.cpp
tests/: meson.build  vector_tests.cpp
